# bro-connector

./: .gitignore  .pre-commit-config.yaml  20240119_FRD_BACKUP.sql  CHANGES.md  Dockerfile  Handleiding_GLD_Import.docx  Handleiding_GMN_Import.docx  Handleiding_XML_Import.docx  HandpeilingenVeerseMeer.csv  LICENSE.MD  Opzet FO en TO BRO koppeling Zeeland v0.4.docx  README.md  Stappenplan_toevoegen_foreign_keys.txt  aanlevering.sql  background_task_mtvp.bat  background_task_observations_start.bat  background_task_template.bat  bro_gegevens_ophalen.bat  compose.yaml  create_tables_gld.sql  create_tables_gld_types.sql  database_definition.sql  dump-gld_zeeland_productie-202204221154.sql  gld.sql  gld_addition_example.sql  gmw.sql  hatch.toml  project.toml  pyproject.toml  requirements.txt  test_database_backup.sql
.github/ISSUE_TEMPLATE/: bro-connector-issue.yml  bro-connector-request.yml  gw-datalens-issue.yml  gw-datalens-request.yml
.github/workflows/: ci.yml
bro_connector/: .env  .gitignore  asgi.py  bro_uitgifte.py  conftest.py  context_processors.py  django.cmd  manage.py  my_project.dot  requirements.txt  settings.py  urls.py
bro_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bro_connector/.cache/: cache.db  (+2 more)
bro_provincie_zeeland/: manage.py
data/: Bijlage 1 GWMeetnetZld Bemonsteringsronde 2024 tbv offerte.csv  GWMeetnetZld Bemonsteringsronde 2021 tbv json FieldForm.csv  OverzichtOvergenomenPutten.xlsx  Peilbuizen HZL BRO TNO lijst.csv  Peilbuizen Natuurmonumenten Zeeland Dino TNO.csv  Peilbuizen natuur.csv  SBB_peilbuizen.csv
fieldforms/: locations_20241011.json
provincie_zeeland_gld/: django.bat  manage.py
(+789 files in other folders)
