[project]
authors = [{name = "StevenHosper", email = "stevenhosper@gmail.nl"}]
dependencies = ["django-jazzmin>=3.0.1,<4", "djangorestframework>=3.15.2,<4", "django-modeladmin-reorder>=0.3.1,<0.4", "django-admin-generator>=2.6.0,<3", "django-image-uploader-widget>=1.0.0,<2", "traval>=0.5.1,<0.6", "django-static-jquery>=2.1.4,<3", "django-admin-autocomplete-filter>=0.7.1,<0.8", "dpd-static-support>=0.0.5,<0.0.6"]
description = "Open-Source applicatie voor het beheer van Grondwatermonitoring (BRO)."
name = "bro_connector"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
bro_connector = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gdal = "==3.7.1"
